Fix problems with SIGWINCH. From Paul Ripke in PR 42161.